--- a/chartsapp.config.json
+++ b/chartsapp.config.json
@@ -25,7 +25,7 @@
         "fullscreen": false,
         "height": 600,
         "resizable": true,
-        "title": "Tauri App",
+        "title": "Charts App",
         "width": 800
       }
     ]
